--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -1,4 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Game Alerts</string>
+    <string name="notifications">התראות</string>
+
+
+    <string-array name="days_of_week">
+        <item>ראשון</item>
+        <item>שני</item>
+        <item>שלישי</item>
+        <item>רביעי</item>
+        <item>חמישי</item>
+        <item>שישי</item>
+        <item>שבת</item>
+    </string-array>
+    <string name="alert_days">ימי התראות</string>
+    <string name="set_notification_time">הגדר שעת התראה</string>
+
 </resources>
