--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,30 @@
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="next_games">המשחקים הבאים :</string>
     <string name="next_game">המשחק הקרוב</string>
+    <string name="notifications">Notifications</string>
+
+
+    <string-array name="days_of_week">
+        <item>Sunday</item>
+        <item>Monday</item>
+        <item>Tuesday</item>
+        <item>Wednesday</item>
+        <item>Thursday</item>
+        <item>Friday</item>
+        <item>Saturday</item>
+    </string-array>
+
+    <string-array name="days_of_week_values">
+        <item>"SUN"</item>
+        <item>"MON"</item>
+        <item>"TUE"</item>
+        <item>"WED"</item>
+        <item>"THU"</item>
+        <item>"FRI"</item>
+        <item>"SAT"</item>
+    </string-array>
+    <string name="alert_days">Alert days</string>
+    <string name="set_notification_time">Set notifications Time</string>
+
+
 </resources>
